Add comments to files

--- a/COMP9321/Week4/Visualization.ipynb
+++ b/COMP9321/Week4/Visualization.ipynb
@@ -132,6 +132,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "#Build dataframe\n",
     "df = pd.DataFrame(np.random.randn(10, 4).cumsum(0), columns=['A', 'B', 'C', 'D'], index=np.arange(0, 100, 10))\n",
     "df"
    ]
@@ -166,6 +167,7 @@
     }
    ],
    "source": [
+    "#plot information without anything extra - just uses the dataframe information to plot.\n",
     "df.plot()"
    ]
   },
@@ -281,6 +283,7 @@
     }
    ],
    "source": [
+    "#Make another dataframe\n",
     "Data = {'country':['USA', 'Australia', 'Canada', 'Australia', 'USA', 'USA', 'Canada', 'Australia', 'Canada'], 'year':[2015, 2016, 1994, 1995, 2002, 1995, 2008, 2005, 2015], 'unemployment':[6.4, 7.3, 8.2, 4.1, 6.6, 5.6, 5.2, 5.6, 5]}\n",
     "df2 =pd.DataFrame(Data)\n",
     "\n",
@@ -318,6 +321,7 @@
     }
    ],
    "source": [
+    "#We can see the default information is not helpful for us here as the index is not meaningful.\n",
     "df2.plot()"
    ]
   },
@@ -351,6 +355,7 @@
     }
    ],
    "source": [
+    "#Make the data more meaningful by grouping by ccountries and taking the mean of the unemployment rate in a barh (bar horizontal) graph.\n",
     "df2.groupby(\"country\")['unemployment'].mean().plot(kind='barh')"
    ]
   },
@@ -384,6 +389,7 @@
     }
    ],
    "source": [
+    "#Didn't specify anything, and the graph here is meaningless even thogh we labelled.\n",
     "df2.plot(x='year', y='unemployment')"
    ]
   },
@@ -421,8 +427,10 @@
     }
    ],
    "source": [
-    "\n",
+    "#Subplots means more than one plot\n",
     "fig, ax = plt.subplots()\n",
+    "#ax = ax means share the same axis/show on the same figure\n",
+    "#So it shows unemployment for each country \n",
     "df2.groupby('country').plot(x='year', y='unemployment', ax=ax, legend= False)\n"
    ]
   },
@@ -719,6 +727,7 @@
     }
    ],
    "source": [
+    "#Drop nans\n",
     "df4.dropna(axis='columns', how='all')"
    ]
   },
@@ -762,6 +771,7 @@
     }
    ],
    "source": [
+    "#Extract useful informaiton\n",
     "df4['pub_date'] = pd.to_datetime(df4['pub_date'])\n",
     "df4.rename(columns = {'Unnamed: 0':'CVE'}, inplace=True)\n",
     "df4['CVE-Year'] = df4['pub_date'].apply(lambda x: x.strftime('%Y')) \n",
@@ -799,6 +809,7 @@
     }
    ],
    "source": [
+    "#Since our information is already very neat and years are our index we are free to simply plot the information.\n",
     "Our_grouped_CVEs.plot()"
    ]
   },
@@ -832,6 +843,7 @@
     }
    ],
    "source": [
+    "#Another visualisation, showing how 'severe' the vulnerabilities in CVE grouped by cvss (The severity of the vulnerability). So we see the majority of vulnerabilities are above a 4 in severeness.\n",
     "df4.groupby(\"cvss\")['CVE'].count().plot()"
    ]
   },
