--- a/COMP9321/Week3/Preprocessing.ipynb
+++ b/COMP9321/Week3/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "sunrise-jersey",
    "metadata": {},
    "outputs": [],
@@ -21,98 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "female-federal",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>preTestScore</th>\n",
-       "      <th>postTestScore</th>\n",
-       "      <th>NaN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Jason</td>\n",
-       "      <td>Miller</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25,000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Molly</td>\n",
-       "      <td>Jacobson</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>94,000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Tina</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>57</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jake</td>\n",
-       "      <td>Milner</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>62</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Amy</td>\n",
-       "      <td>Cooze</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>70</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "  first_name last_name   age  preTestScore postTestScore  NaN\n",
        "0      Jason    Miller  42.0           4.0        25,000  NaN\n",
@@ -121,11 +36,11 @@
        "3       Jake    Milner  24.0           NaN            62  NaN\n",
        "4        Amy     Cooze  73.0           NaN            70  NaN\n",
        "5        NaN       NaN   NaN           NaN           NaN  NaN"
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>first_name</th>\n      <th>last_name</th>\n      <th>age</th>\n      <th>preTestScore</th>\n      <th>postTestScore</th>\n      <th>NaN</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Jason</td>\n      <td>Miller</td>\n      <td>42.0</td>\n      <td>4.0</td>\n      <td>25,000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Molly</td>\n      <td>Jacobson</td>\n      <td>52.0</td>\n      <td>24.0</td>\n      <td>94,000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tina</td>\n      <td>NaN</td>\n      <td>36.0</td>\n      <td>31.0</td>\n      <td>57</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Jake</td>\n      <td>Milner</td>\n      <td>24.0</td>\n      <td>NaN</td>\n      <td>62</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Amy</td>\n      <td>Cooze</td>\n      <td>73.0</td>\n      <td>NaN</td>\n      <td>70</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -134,101 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "strong-spank",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>preTestScore</th>\n",
-       "      <th>postTestScore</th>\n",
-       "      <th>NaN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   first_name  last_name   age  preTestScore  postTestScore    NaN\n",
-       "0        True       True  True          True           True  False\n",
-       "1        True       True  True          True           True  False\n",
-       "2        True      False  True          True           True  False\n",
-       "3        True       True  True         False           True  False\n",
-       "4        True       True  True         False           True  False"
-      ]
+       "   first_name  last_name    age  preTestScore  postTestScore    NaN\n",
+       "0        True       True   True          True           True  False\n",
+       "1        True       True   True          True           True  False\n",
+       "2        True      False   True          True           True  False\n",
+       "3        True       True   True         False           True  False\n",
+       "4        True       True   True         False           True  False\n",
+       "5       False      False  False         False          False  False"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>first_name</th>\n      <th>last_name</th>\n      <th>age</th>\n      <th>preTestScore</th>\n      <th>postTestScore</th>\n      <th>NaN</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -237,81 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "developing-portfolio",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>preTestScore</th>\n",
-       "      <th>postTestScore</th>\n",
-       "      <th>NaN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Jason</td>\n",
-       "      <td>Miller</td>\n",
-       "      <td>42</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25,000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Molly</td>\n",
-       "      <td>Jacobson</td>\n",
-       "      <td>52</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>94,000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Tina</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>57</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  first_name last_name  age  preTestScore postTestScore  NaN\n",
-       "0      Jason    Miller   42           4.0        25,000  NaN\n",
-       "1      Molly  Jacobson   52          24.0        94,000  NaN\n",
-       "2       Tina       NaN   36          31.0            57  NaN"
-      ]
+       "  first_name last_name   age  preTestScore postTestScore  NaN\n",
+       "0      Jason    Miller  42.0           4.0        25,000  NaN\n",
+       "1      Molly  Jacobson  52.0          24.0        94,000  NaN\n",
+       "2       Tina       NaN  36.0          31.0            57  NaN"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>first_name</th>\n      <th>last_name</th>\n      <th>age</th>\n      <th>preTestScore</th>\n      <th>postTestScore</th>\n      <th>NaN</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Jason</td>\n      <td>Miller</td>\n      <td>42.0</td>\n      <td>4.0</td>\n      <td>25,000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Molly</td>\n      <td>Jacobson</td>\n      <td>52.0</td>\n      <td>24.0</td>\n      <td>94,000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tina</td>\n      <td>NaN</td>\n      <td>36.0</td>\n      <td>31.0</td>\n      <td>57</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -370,6 +152,7 @@
     }
    ],
    "source": [
+    "#Drops all rows that have an nan\n",
     "df.dropna()"
    ]
   },
@@ -473,6 +256,7 @@
     }
    ],
    "source": [
+    "#Drops rows that are all Nan\n",
     "df.dropna(how='all')"
    ]
   },
@@ -578,6 +362,7 @@
    "source": [
     "cleaned= df\n",
     "\n",
+    "#Inplace option does incplace operations rather than creating new table\n",
     "cleaned.dropna(how='all', inplace=True)\n",
     "cleaned"
    ]
@@ -682,6 +467,7 @@
     }
    ],
    "source": [
+    "#Fill defined column with default value if nan\n",
     "cleaned.fillna({'preTestScore': 20, 'last_name': 'Doe'}, inplace=True)\n",
     "cleaned"
    ]
@@ -780,6 +566,7 @@
     }
    ],
    "source": [
+    "#Drop a whole column of Nan values that are nan by providing axis\n",
     "cleaned.dropna(axis=1, how='all')\n"
    ]
   },
@@ -885,6 +672,7 @@
    "source": [
     "dirty_df = df\n",
     "dirty_df.assign(column1=np.nan)\n",
+    "#Put nan into row 4, column first-name\n",
     "dirty_df.at[4, 'first_name']=np.nan\n",
     "dirty_df"
    ]
@@ -979,6 +767,7 @@
     }
    ],
    "source": [
+    "#Drop rows that have less than 5 real (non-nan) values\n",
     "dirty_df.dropna(thresh=5)"
    ]
   },
@@ -993,9 +782,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -1007,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
